# ChessPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt
config/chesspp/: board.json  resources.json
src/: CMakeLists.txt
src/board/: Analyzer.hpp  CMakeLists.txt  TraditionalAnalyzer.cpp  TraditionalAnalyzer.hpp
src/client/: Action.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Main.cpp  Piece.hpp  SFML.hpp  SfmlEventHandler.hpp
src/client/app/: AppState.hpp  Application.cpp  Application.hpp  Button.cpp  Button.hpp  ButtonManager.cpp  ButtonManager.hpp  CMakeLists.txt  ChessPlusPlusState.cpp  ChessPlusPlusState.hpp  StartMenuState.cpp  StartMenuState.hpp
src/client/config/: ResourcesConfig.hpp
src/client/data/config/: resources.json
src/client/res/: ResourceManager.hpp  SfmlFileResource.hpp
src/common/: CMakeLists.txt  Debug.cpp  Debug.hpp
src/common/config/: CMakeLists.txt  Configuration.cpp  Configuration.hpp
src/common/net/: CMakeLists.txt  Message.cpp  Message.hpp
src/common/util/: CMakeLists.txt  Direction.cpp  Direction.hpp  JsonReader.cpp  JsonReader.hpp  Position.hpp  Utilities.hpp
src/piece/: CMakeLists.txt  Ghost.cpp  Ghost.hpp
src/server/: CMakeLists.txt  Main.cpp
src/server/board/: Board.cpp  Board.hpp  CMakeLists.txt
src/server/config/: BoardConfig.cpp  BoardConfig.hpp  CMakeLists.txt  ResourcesConfig.hpp
src/server/data/config/chesspp/: resources.json
src/server/net/: CMakeLists.txt  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Server.cpp  Server.hpp
src/server/piece/: Archer.cpp  Archer.hpp  Bishop.cpp  Bishop.hpp  CMakeLists.txt  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
